Adding Nergis' paper

--- a/papers/iis.bib
+++ b/papers/iis.bib
@@ -1,3 +1,17 @@
+@article{khan2021free,
+  title={Free-Living Motor Activity Monitoring in Ataxia-Telangiectasia},
+  author={Khan, Nergis C and Pandey, Vineet and Gajos, Krzysztof Z and Gupta, Anoopum S},
+  journal={The Cerebellum},
+  pages={1--12},
+  year={2021},
+  publisher={Springer},
+  url = {https://doi.org/10.1007/s12311-021-01306-y},
+  abstract = {With disease-modifying approaches under evaluation in ataxia-telangiectasia and other ataxias, there is a need for objective and reliable biomarkers of free-living motor function. In this study, we test the hypothesis that metrics derived from a single wrist sensor worn at home provide accurate, reliable, and interpretable information about neurological disease severity in children with A-T.<br/>A total of 15 children with A-T and 15 age- and sex-matched controls wore a sensor with a triaxial accelerometer on their dominant wrist for 1 week at home. Activity intensity measures, derived from the sensor data, were compared with in-person neurological evaluation on the Brief Ataxia Rating Scale (BARS) and performance on a validated computer mouse task.<br/>Children with A-T were inactive the same proportion of each day as controls but produced more low intensity movements (p < 0.01; Cohen's d = 1.48) and fewer high intensity movements (p < 0.001; Cohen's d = 1.71). The range of activity intensities was markedly reduced in A-T compared to controls (p < 0.0001; Cohen's d = 2.72). The activity metrics correlated strongly with arm, gait, and total clinical severity (r: 0.71–0.87; p < 0.0001), correlated with specific computer task motor features (r: 0.67–0.92; p < 0.01), demonstrated high reliability (r: 0.86–0.93; p < 0.00001), and were not significantly influenced by age in the healthy control group.<br/>Motor activity metrics from a single, inexpensive wrist sensor during free-living behavior provide accurate and reliable information about diagnosis, neurological disease severity, and motor performance. These low-burden measurements are applicable independent of ambulatory status and are potential digital behavioral biomarkers in A-T.},
+
+  pubtype = {journal},
+  publisherversion = {https://doi.org/10.1007/s12311-021-01306-y},
+}
+
 @article{bucinca2021trust,
 author = {Bu\c{c}inca, Zana and Malaya, Maja Barbara and Gajos, Krzysztof Z.},
 title = {To Trust or to Think: Cognitive Forcing Functions Can Reduce Overreliance on AI in AI-Assisted Decision-Making},
@@ -38,7 +52,7 @@ pubtype = {journal},
 pdf = {bucinca21trust.pdf},
 }
 
-@inbook{jacobs2021designing,
+@inproceedings{jacobs2021designing,
 author = {Jacobs, Maia and He, Jeffrey and F. Pradier, Melanie and Lam, Barbara and Ahn, Andrew C. and McCoy, Thomas H. and Perlis, Roy H. and Doshi-Velez, Finale and Gajos, Krzysztof Z.},
 title = {Designing AI for Trust and Collaboration in Time-Constrained Medical Decisions: A Sociotechnical Lens},
 year = {2021},
@@ -72,7 +86,7 @@ note = {To appear.}
 }
 
 
-@inbook{lekschas2021ask, 
+@inproceedings{lekschas2021ask, 
 author = {Lekschas, Fritz and Ampanavos, Spyridon and Siangliulue, Pao and Pfister, Hanspeter and Gajos, Krzysztof Z.},
  title = {Ask Me or Tell Me? Enhancing the Effectiveness of Crowdsourced Design Feedback},
  year = {2021},
