fixed title of the translational psychiatry paper

--- a/papers/iis.bib
+++ b/papers/iis.bib
@@ -109,7 +109,7 @@ resources-url = {http://www.eecs.harvard.edu/~kgajos/papers/2021/lekschas21ask-s
 
 @article{jacobs2021how,
 author = {Maia Jacobs and Melanie F. Pradier and Thomas H. McCoy Jr and Roy H. Perlis and Finale Doshi-Velez and Krzysztof Z. Gajos},
-title = {How machine-learning recommendations influence clinician treatment selections: the example of the antidepressant selection},
+title = {How machine-learning recommendations influence clinician treatment selections: the example of antidepressant selection},
 journal = {Translational Psychiatry},
 year = {2021},
 volume = {11},
