new DERBI papers, fixed an old citation

--- a/papers/iis.bib
+++ b/papers/iis.bib
@@ -1,3 +1,27 @@
+@article{brody2021outcomes,
+  title={Outcomes from Returning Individual versus Only Study-Wide Biomonitoring Results in an Environmental Exposure Study Using the Digital Exposure Report-Back Interface ({DERBI})},
+  author={Brody, Julia Green and Cirillo, Piera M and Boronow, Katherine E and Havas, Laurie and Plumb, Marj and Susmann, Herbert P and Gajos, Krzysztof Z and Cohn, Barbara A},
+  journal={Environmental health perspectives},
+  volume={129},
+  number={11},
+  pages={117005},
+  year={2021},
+  url={https://doi.org/10.1289/EHP9072},
+  abstract = {<b>Backtround:</b> Study participants want to receive their biomonitoring results for environmental chemicals, and ethics guidelines encourage reporting back. However, few studies have quantitively assessed participants’ responses to individual exposure reports, and digital methods have not been evaluated.<br/>
+<b>Objectives:</b>
+We isolated effects of receiving personal results vs. only study-wide findings and investigated whether effects differed for Black participants.<br/>
+<b>Methods:</b>
+We randomly assigned a subset of 295 women from the Child Health and Development Studies, half of whom were Black, to receive a report with personal environmental chemical results or only study-wide (aggregate) findings. Reports included results for 42 chemicals and lipids and were prepared using the Digital Exposure Report-Back Interface (DERBI). Women were interviewed before and after viewing their report. We analyzed differences in website activity, emotional responses, and intentions to participate in future research by report type and race using Wilcoxon rank sum tests, Wilcoxon-Pratt signed ranks tests, and multiple regression.<br/>
+<b>Results:</b>
+The personal report group spent approximately twice as much time on their reports as the aggregate group before the post-report-back interview. Among personal-report participants (n=93), 84\% (78) viewed chemical group information for at least one personal result highlighted on their home page; among aggregate-report participants (n=94), 66\% (62) viewed any chemical group page. Both groups reported strong positive feelings (curious, informed, interested, respected) about receiving results before and after report-back and mild negative feelings (helpless, scared, worried). Although most participants remained unworried after report-back, worry increased by a small amount in both groups. Among Black participants, higher post report-back worry was associated with having high levels of chemicals.<br/>
+<b>Conclusions:</b>
+Participants were motivated by their personal results to access online information about chemical sources and potential health effects. Report-back was associated with a small increase in worry, which could motivate appropriate action. Personal report-back increased engagement with exposure reports among Black participants. },
+
+  pubtype = {journal},
+  publisherversion={https://doi.org/10.1289/EHP9072},
+  image = {http://www.eecs.harvard.edu/~kgajos/papers/images/brody2021outcomes.png},
+}
+
 @article{khan2021free,
   title={Free-Living Motor Activity Monitoring in Ataxia-Telangiectasia},
   author={Khan, Nergis C and Pandey, Vineet and Gajos, Krzysztof Z and Gupta, Anoopum S},
@@ -412,15 +436,26 @@ publisherversion={http://doi.acm.org/10.1145/3290605.3300309},
 
 
 @inproceedings{li18vounteer,
-author = {Qisheng Li and Krzysztof Z. Gajos and Katharina Reinecke},
-title = {Volunteer-Based Online Studies With Older Adults and People with Disabilities},
-year = {2018},
-booktitle = {Proceedings of the 20th International ACM SIGACCESS Conference on Computers & Accessibility (ACM ASSETS 2018)},
+ author = {Li, Qisheng and Gajos, Krzysztof Z. and Reinecke, Katharina},
+ title = {Volunteer-Based Online Studies With Older Adults and People with Disabilities},
+ booktitle = {Proceedings of the 20th International ACM SIGACCESS Conference on Computers and Accessibility},
+ series = {ASSETS '18},
+ year = {2018},
+ isbn = {978-1-4503-5650-3},
+ location = {Galway, Ireland},
+ pages = {229--241},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/3234695.3236360},
+ doi = {10.1145/3234695.3236360},
+ acmid = {3236360},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {elderly people, online experimentation, people with disabilities, volunteers},
 abstract = {There are few large-scale empirical studies with people with disabilities or older adults, mainly because recruiting participants with specific characteristics is even harder than recruiting young and/or non-disabled populations. Analyzing four online experiments on LabintheWild with a total of 355,656 participants, we show that volunteer-based online experiments that provide personalized feedback attract large numbers of participants with diverse disabilities and ages and allow robust studies with these populations that replicate and extend the findings of prior laboratory studies. To find out what motivates people with disabilities to take part, we additionally analyzed participants' feedback and forum entries that discuss LabintheWild experiments. The results show that participants use the studies to diagnose themselves, compare their abilities to others, quantify potential impairments, self-experiment, and share their own stories - findings that we use to inform design guidelines for online experiment platforms that adequately support and engage people with disabilities.},
 
 pubtype={conference},
 pdf={li18volunteer.pdf},
-note={To appear.},
+publisherversion={http://doi.acm.org/10.1145/3234695.3236360},
 }
 
 @inproceedings{jayatilaka18:petals,
