new metadata and papers

--- a/papers/iis.bib
+++ b/papers/iis.bib
@@ -1,3 +1,63 @@
+
+@inproceedings{ma2022preference,
+author = {Zilin Ma and Krzysztof Z. Gajos},
+title = {{Not Just a Preference: Reducing Biased Decision-making on Dating Websites}},
+year = 2022,
+booktitle = {Proceedings of CHI 2022},
+series = {CHI '22},
+abstract = {As dating websites are becoming an essential part of how people meet intimate and romantic partners, it is vital to design these systems to be resistant to, or at least do not amplify, bias and discrimination. Instead, the results of our online experiment with a simulated dating website, demonstrate that popular dating website design choices, such as the user of the swipe interface (swiping in one direction to indicate a like and in the other direction to express a dislike) and match scores, resulted in people racially biases choices even when they explicitly claimed not to have considered race in their decision-making. This bias was significantly reduced when the order of information presentation was reversed such that people first saw substantive profile information related to their explicitly-stated preferences before seeing the profile name and photo. These results indicate that currently-popular design choices amplify people's implicit biases in their choices of potential romantic partners, but the effects of the implicit biases can be reduced by carefully redesign the dating website interfaces.},
+
+pubtype = {conference},
+pdf = {ma2022preference.pdf},
+image = {http://www.eecs.harvard.edu/~kgajos/papers/images/ma2022preference-thumb.png},
+note = {To appear.}
+}
+
+@inproceedings{gajos2022people,
+author = {Gajos, Krzysztof Z. and Mamykina, Lena}, 
+title = {Do People Engage Cognitively with AI? Impact of AI Assistance on Incidental Learning}, 
+year = {2022}, 
+isbn = {9781450391443}, 
+publisher = {Association for Computing Machinery}, 
+address = {New York, NY, USA}, 
+url = {https://doi.org/10.1145/3490099.3511138}, 
+doi = {10.1145/3490099.3511138},
+pages = {794–806}, 
+numpages = {13}, 
+keywords = {explainable AI, cognitive engagement, incidental learning, decision support systems, human-centered AI}, 
+location = {Helsinki, Finland}, 
+series = {IUI '22},
+abstract = {When people receive advice while making difficult decisions, they often make better decisions in the moment and also increase their knowledge in the process. However, such incidental learning can only occur when people cognitively engage with the information they receive and process this information thoughtfully. How do people process the information and advice they receive from AI, and do they engage with it deeply enough to enable learning? To answer these questions, we conducted three experiments in which individuals were asked to make nutritional decisions and received simulated AI recommendations and explanations. In the first experiment, we found that when people were presented with both a recommendation and an explanation before making their choice, they made better decisions than they did when they received no such help, but they did not learn. In the second experiment, participants first made their own choice, and only then saw a recommendation and an explanation from AI; this condition also resulted in improved decisions, but no learning. However, in our third experiment, participants were presented with just an AI explanation but no recommendation and had to arrive at their own decision. This condition led to both more accurate decisions and learning gains. We hypothesize that learning gains in this condition were due to deeper engagement with explanations needed to arrive at the decisions. This work provides some of the most direct evidence to date that it may not be sufficient to provide people with AI-generated recommendations and explanations to ensure that people engage carefully with the AI-provided information. This work also presents one technique that enables incidental learning and, by implication, can help people process AI recommendations and explanations more carefully.},
+
+pubtype = {conference},
+pdf = {gajos2022people.pdf},
+publisherversion = {https://doi.org/10.1145/3490099.3511138},
+image = {http://www.eecs.harvard.edu/~kgajos/papers/images/gajos2022people.png},
+video-embedded={<iframe width="560" height="315" src="https://www.youtube.com/embed/H-OWOUK1VOM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>},
+note = {To appear.}
+}
+
+
+@article{ruotsalo2022active,
+  abstract = {We introduce active tag recommendation for interactive entity search, an approach that actively learns to suggest tags from preceding user interactions with the recommended tags. The approach utilizes an online reinforcement learning model and observes user interactions on the recommended tags to reward or penalize the model. Active tag recommendation is implemented as part of a realistic search engine indexing a large collection of movie data. The approach is evaluated in task-based user experiments comparing a complete search system enhanced with active tag recommendation to a control system in which active tag recommendation is not available. In the experiment, participants (N = 45) performed search tasks on the movie domain and the corresponding search interactions, information selections, and entity rankings were logged and analyzed. The results show that active tag recommendation (1) improves the ranking of entities compared to written-query interaction, (2) increases the amount of interaction and effectiveness of interactions to rank entities that end up being selected in a task, and (3) reduces, but does not substitute, the need for written-query interaction (4) without compromising task execution time. The results imply that active learning for search support can help users to interact with entity search systems by reducing the need for writing queries and improve search outcomes without compromising the time used for searching.},
+  author = {Tuukka Ruotsalo and Sean Weber and Krzysztof Z. Gajos},
+  date-modified = {2022-02-10 06:54:55 -0500},
+  doi = {https://doi.org/10.1016/j.ipm.2021.102856},
+  issn = {0306-4573},
+  journal = {Information Processing & Management},
+  keywords = {Tag recommendation, Active learning, Information retrieval, Search user interfaces, User study},
+  number = {2},
+  pages = {102856},
+  title = {Active tag recommendation for interactive entity search: Interaction effectiveness and retrieval performance},
+  url = {https://www.sciencedirect.com/science/article/pii/S0306457321003277},
+  volume = {59},
+  year = {2022},
+  
+  pubtype = {journal},
+  publisherversion = {https://doi.org/10.1016/j.ipm.2021.102856},
+  }
+
+
 @article{brody2021outcomes,
   title={Outcomes from Returning Individual versus Only Study-Wide Biomonitoring Results in an Environmental Exposure Study Using the Digital Exposure Report-Back Interface ({DERBI})},
   author={Brody, Julia Green and Cirillo, Piera M and Boronow, Katherine E and Havas, Laurie and Plumb, Marj and Susmann, Herbert P and Gajos, Krzysztof Z and Cohn, Barbara A},
@@ -74,6 +134,7 @@ keywords = {trust, explanations, cognition, artificial intelligence},
 
 pubtype = {journal},
 pdf = {bucinca21trust.pdf},
+publisherversion = {https://doi.org/10.1145/3449287},
 }
 
 @inproceedings{jacobs2021designing,
