some updated info

--- a/papers/iis.bib
+++ b/papers/iis.bib
@@ -1,8 +1,38 @@
+
+@article{eklund2023real,
+  abstract = {{Novel disease modifying therapies are being evaluated in spinocerebellar ataxias and multiple system atrophy. Clinician-performed disease rating scales are relatively insensitive for measuring disease change over time, resulting in large and long clinical trials. We tested the hypothesis that sensors worn continuously at home during natural behavior and a web-based computer mouse task performed at home could produce interpretable, meaningful, and reliable motor measures for potential use in clinical trials.Thirty-four individuals with degenerative ataxias (spinocerebellar ataxia types 1, 2, 3, and 6 and multiple system atrophy of the cerebellar type) and eight age-matched controls completed the cross-sectional study. Participants wore an ankle and wrist sensor continuously at-home for one week and completed the Hevelius computer mouse task eight times over four weeks. We examined properties of motor primitives called ``submovements'' derived from the continuous wearable sensors and properties of computer mouse clicks and trajectories in relationship to patient-reported measures of function (PROM-Ataxia) and ataxia rating scales (Scale for the Assessment and Rating of Ataxia and the Brief Ataxia Rating Scale). The test-retest reliability of digital measures and differences between ataxia and control participants were evaluated.Individuals with ataxia had smaller, slower, and less powerful ankle submovements during natural behavior at home. A composite measure based on ankle submovements strongly correlated with ataxia rating scale scores (Pearson's r = 0.82-0.88), strongly correlated with self-reported function (r = 0.81), had high test-retest reliability (intraclass correlation coefficient = 0.95), and distinguished ataxia and control participants, including preataxic individuals (N=4) from controls. A composite measure based on computer mouse movements and clicks strongly correlated with ataxia rating scale total (r = 0.86-0.88) and arm scores (r = 0.65-0.75), correlated well with self-reported function (r = 0.72-0.73), and had high test-retest reliability (intraclass correlation coefficient = 0.99).These data indicate that interpretable, meaningful, and highly reliable motor measures can be obtained from continuous measurement of natural movement, particularly at the ankle location, and from computer mouse movements during a simple point-and-click task performed at home. This study supports the use of these two inexpensive and easy-to-use technologies in longitudinal natural history studies in spinocerebellar ataxias and multiple system atrophy of the cerebellar type and shows promise as potential motor outcome measures in interventional trials.}},
+  author = {Eklund, Nicole M and Ouillon, Jessey and Pandey, Vineet and Stephen, Christopher D and Schmahmann, Jeremy D and Edgerton, Jeremy and Gajos, Krzysztof Z and Gupta, Anoopum S},
+  doi = {10.1093/braincomms/fcad064},
+  eprint = {https://academic.oup.com/braincomms/advance-article-pdf/doi/10.1093/braincomms/fcad064/49514822/fcad064.pdf},
+  issn = {2632-1297},
+  journal = {Brain Communications},
+    volume = {5},
+    number = {2},
+    year = {2023},
+    month = {03},
+  title = {{Real-life ankle submovements and computer mouse use reflect patient-reported function in adult ataxias}},
+  url = {https://doi.org/10.1093/braincomms/fcad064},
+
+pubtype = "journal",
+publisherversion = {https://doi.org/10.1093/braincomms/fcad064},
+  }
+
 @article{pandey2023accuracy,
 title = {Accuracy and Reliability of At-home Quantification of Motor Impairments Using a Computer-based Pointing Task with Children with Ataxia-Telangiectasia},
 author = {Vineet Pandey and Nergis C. Khan and Anoopum S. Gupta and Krzysztof Z. Gajos},
 journal = {ACM Transactions on Accessible Computing},
+month = {mar}, 
+articleno = {10}, 
+numpages = {25},
 year = {2023},
+issue_date = {March 2023}, 
+publisher = {Association for Computing Machinery}, 
+address = {New York, NY, USA}, 
+volume = {16}, 
+number = {1}, 
+issn = {1936-7228}, 
+url = {https://doi.org/10.1145/3581790}, 
+doi = {10.1145/3581790},
 abstract = {Methods for obtaining accurate quantitative assessments of motor impairments are essential in accessibility research, design of adaptive ability-based assistive technologies, as well as in clinical care and medical research. Currently, such assessments are typically performed in controlled laboratory or clinical settings under professional supervision. Emerging approaches for collecting data in unsupervised settings have been shown to produce valid data when aggregated over large populations, but it is not yet established if in unsupervised settings measures of research or clinical significance can be collected accurately and reliably for individuals.
 We conducted a study with 13 children with ataxia-telangiectasia and 9 healthy children to analyze the validity, test-retest reliability, and acceptability of at-home use of a recent active digital phenotyping system, called Hevelius. Hevelius produces 32 measures derived from the movement trajectories of the mouse cursor, and it produces a quantitative estimate of motor impairment in the dominant arm using the dominant arm component of the Brief Ataxia Rating Scale (BARS). 
 The severity score estimates generated by Hevelius from single at-home sessions deviated from clinician-assigned BARS scores more than the severity score estimates generated from single sessions conducted under researcher supervision. However, taking a median of as few as 2 consecutive sessions produced severity score estimates that were as accurate or better than the estimates produced from single supervised sessions. Further, aggregating as few as 2 consecutive sessions resulted in good test-retest reliability (ICC = 0.81 for A-T participants).
@@ -10,6 +40,7 @@ This work demonstrated the feasibility of performing accurate and reliable quant
 
 pubtype = "journal",
 pdf = "pandey2023accuracy.pdf",
+image={http://www.eecs.harvard.edu/~kgajos/papers/images/hevelius.png},
 publisherversion = {https://doi.org/10.1145/3581790},
 }
 
